과제 해설 후 변경

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+과제해설.md
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,pycharm,django,python,venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,pycharm,django,python,venv
 
